switched images to png since pages doesn't seem to support it

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           ./build.py
           # Deploy all the files we need in the generated site to the `dist/` folder.
           mkdir -p dist/
-          cp -r css/ js/ assets/ proposals.json  index.html favicon.svg dist/
+          cp -r css/ js/ assets/ proposals.json  index.html favicon.png CNAME dist/
           ls -la dist/*
 
       - name: Minify files
